--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,9 @@
 {
- "name": "dev_project",
- "version": "0.0.0"
-
+  "name": "dev_project",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "bootstrap": "~3.3.4"
+  }
 }
