--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "dev_project",
   "version": "0.0.0",
-  "description": "Project description"
-
-
+  "description": "Project description",
+  "private": true,
+  "dependencies": {
+    "ejs": "^2.3.1",
+    "express": "^4.12.4"
+  }
 }
