--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.1",
+    "grunt-open": "^0.2.3"
   }
 }
