--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,8 @@
     "angular": "~1.4.0",
     "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.4.0"
   }
 }
