--- a/package.json
+++ b/package.json
@@ -8,9 +8,25 @@
     "express": "^4.12.4"
   },
   "devDependencies": {
+    "chai": "^3.0.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.5.1",
-    "grunt-open": "^0.2.3"
+    "grunt-karma": "^0.11.0",
+    "grunt-open": "^0.2.3",
+    "karma": "^0.12.36",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.4.2",
+    "karma-htmlfile-reporter": "^0.2.1",
+    "karma-mocha": "^0.1.10",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17",
+    "sinon": "^1.15.3",
+    "sinon-chai": "^2.8.0"
   }
 }
